Gradually uncovering what seems like a deep dark mystery about cross-validation...

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -13,7 +13,7 @@ bibliography: references.bib
 ---
 
 ```{r}
-resource_version <- "20231216-114240-f49579e4"
+resource_version <- "20231216-180049-5e403105"
 ```
 
 # Models for areal spatial structure {#beyond-borders}
@@ -581,10 +581,10 @@ Household survey data was used from across four countries in sub-Saharan Africa 
 
 | Country        | Survey    | Number of areas | Analysis level |
 |----------------|---------- |-----------------|-----------------|
-| Côte d'Ivoire  | PHIA 2017 | 33              | Region          |
-| Malawi         | PHIA 2016 | 31              | Health district and cities, with the islands Likoma and Chizumulu removed |
-| Tanzania       | PHIA 2017 | 31              | Region          |
-| Zimbabwe       | PHIA 2016 | 60              | District        |
+| Côte d'Ivoire  | PHIA 2017 | 33              | Regions          |
+| Malawi         | PHIA 2016 | 31              | Health districts and cities, with islands removed |
+| Tanzania       | PHIA 2017 | 26              | Regions, with islands removed          |
+| Zimbabwe       | PHIA 2016 | 60              | Districts       |
 
 Table: (\#tab:hiv-surveys) The four PHIA household surveys included in the HIV prevalence study.
 
@@ -677,6 +677,8 @@ Figures \@ref(fig:crps-mean-se-civ2017phia), \@ref(fig:crps-mean-se-mwi2016phia)
 
 ### Modelling
 
+* Kernel with long lengthscale looks like IID
+* GMRFs perform smoothing more locally
 * Related work to discuss includes @follestad2003modelling and @konstantinoudis2020discrete.
 * Aggregation via the integrated kernel occurs at the level of the latent field.
 However, most of the time we expect aggregation to occur at the level of the data.
