Add lengthscale and BYM2 plots to Appendix A

--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -3,7 +3,7 @@
 `r if(!knitr:::is_latex_output()) '# (APPENDIX) Appendix {-}'` 
 
 ```{r}
-resource_version <- "20231216-180049-5e403105"
+resource_version <- "20231216-214320-f8cc2fc8"
 ```
 
 # Models for areal spatial structure
@@ -67,9 +67,23 @@ knitr::include_graphics(path)
 
 ## Simulation study {#simulation-appendix}
 
-### Lengthscale hyperparameter {#lengthscale}
+### Lengthscale hyperparameter recovery {#lengthscale}
+
+(ref:lengthscale-recovery) Figure caption.
+
+```{r lengthscale-recovery, fig.cap="(ref:lengthscale-recovery)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/lengthscale-recovery.png")
+knitr::include_graphics(path)
+```
 
 ### BYM2 proportion hyperparameter {#bym2-proportion}
+
+(ref:proportion-recovery) Figure caption.
+
+```{r proportion-recovery, fig.cap="(ref:proportion-recovery)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/proportion-recovery.png")
+knitr::include_graphics(path)
+```
 
 ### Mean squared error
 
