--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -1016,10 +1016,16 @@ knitr::include_graphics("figures/naomi-aghq/conditional-simulation-rho-diff-fixe
 knitr::include_graphics("figures/naomi-aghq/loa-loa-mean-sd-abs.png")
 ```
 
+(ref:loa-loa-worst-node) The element of the latent field with maximum difference in absolute difference to NUTS for the posterior mean was $u_{184}$.
+
+```{r loa-loa-worst-node, fig.cap="(ref:loa-loa-worst-node)"}
+knitr::include_graphics("figures/naomi-aghq/loa-loa-worst-node.png")
+```
+
 For both the suitability (Figures \@ref(fig:conditional-simulation-phi-diff-fixed)) and prevalence (Figure \@ref(fig:conditional-simulation-rho-diff-fixed)) posterior mean, using Laplace marginals rather than Gaussian marginals substantially reduces the extent of error with respect to NUTS.
 As the hyperparameter posteriors for each approach were the same, differences in Gaussian field simulation results were due to differences in latent field posterior marginals at each of the 190 sites, shown in Figure \@ref(fig:loa-loa-mean-sd-abs).
 
-(ref:loa-loa-time) Time taken placeholder.
+(ref:loa-loa-time) Figure caption.
 
 ```{r loa-loa-time, fig.cap="(ref:loa-loa-time)"}
 knitr::include_graphics("figures/naomi-aghq/loa-loa-time.png")
