Add simulation study results figure to slides

--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -42,9 +42,15 @@ knitr::include_graphics("../figures/beyond-borders/geometries.png")
 
 #
 
-```{r crps, echo=FALSE, out.width="80%", fig.align = 'center'}
-resource_version <- "20231212-153116-1996fc83"
+```{r crps-mean-se-civ, echo=FALSE, out.width="80%", fig.align = 'center'}
+resource_version <- "20231217-185705-97a395ec"
 knitr::include_graphics(paste0("../resources/beyond-borders/", resource_version, "/depends/crps-mean-se-civ.png"))
+```
+
+#
+
+```{r crps-mean-se-surveys, echo=FALSE, out.width="65%", fig.align = 'center'}
+knitr::include_graphics(paste0("../resources/beyond-borders/", resource_version, "/depends/crps-mean-se-surveys.png"))
 ```
 
 #
