Improve figure captions about time taken for epilepsy GLMM and Loa loa ELGM

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -928,7 +928,7 @@ For this problem, the `tmbstan` implementation of NUTS took `r epil_nuts_multipl
 Diagnostics (Figures \@ref(fig:tmbstan-epil) and \@ref(fig:stan-epil)) show that both implementations converged.
 @monnahan2018no (Supporting information) found runtime with `rstan` and `tmbstan` to be comparable, so the relatively large difference in this case is surprising.
 
-(ref:epil-time) The number of seconds taken to perform inference with each method and software implementation.
+(ref:epil-time) The number of seconds taken to perform inference for the epilepsy GLMM using each method and software implementation given in Table \@ref(tab:epil-approaches).
 
 ```{r epil-time, fig.cap="(ref:epil-time)"}
 knitr::include_graphics("figures/naomi-aghq/epil-time.png")
@@ -1025,7 +1025,7 @@ knitr::include_graphics("figures/naomi-aghq/loa-loa-worst-node.png")
 For both the suitability (Figures \@ref(fig:conditional-simulation-phi-diff-fixed)) and prevalence (Figure \@ref(fig:conditional-simulation-rho-diff-fixed)) posterior mean, using Laplace marginals rather than Gaussian marginals substantially reduces the extent of error with respect to NUTS.
 As the hyperparameter posteriors for each approach were the same, differences in Gaussian field simulation results were due to differences in latent field posterior marginals at each of the 190 sites, shown in Figure \@ref(fig:loa-loa-mean-sd-abs).
 
-(ref:loa-loa-time) Figure caption.
+(ref:loa-loa-time) The number of minutes taken to perform inference for the Loa loa ELGM using each approach given in Table \@ref(tab:loaloa-approaches).
 
 ```{r loa-loa-time, fig.cap="(ref:loa-loa-time)"}
 knitr::include_graphics("figures/naomi-aghq/loa-loa-time.png")
