--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -19,19 +19,23 @@ bibliography: references.bib
 
 <!-- JWE: Minor corrections often involve (1) fixing typos, (2) clarifying things, (3) elaborating on the contributions to science and implications of the PhD in the conclusions chapter [by far the most common point of examiner feedback] -->
 
-Finally, this thesis is concluded by discussing its most important contributions and limitations, as well as avenues for future work and broader conclusions.
+To conclude the thesis, this chapter discusses in turn its most important contributions and limitations, the most promising avenues for future work, and broader reflections about the work.
 
 ## Contributions
 
-This section discusses the contributions made by each chapter of this thesis in turn.
+Chapter \@ref(beyond-borders) used tools for model assessment such as proper scoring rules and posterior predictive checks to comprehensively compare models for spatial structure.
+Useful data for practitioners.
+Useful to base methodological developments on.
 
-Chapter \@ref(beyond-borders) conducted experiments to comprehensively compare models for spatial structure, using appropriate tools for model assessment such as proper scoring rules and posterior predictive checks.
+Chapter \@ref(multi-agyw) estimated HIV risk group proportions for AGYW to enable implementation of the Global AIDS strategy.
+The risk group proportions were used to disaggregate HIV prevalence and incidence estimates by behaviour, and assess the benefits of a variety of risk stratification strategies.
+Estimates from this work are the basis for a tool used by countries in SSA to prioritise their delivery of HIV prevention services.
+Alongside this applied contribution, Chapter \@ref(multi-agyw) exemplified specification of complex multinomial spatio-temporal models in `R-INLA` using the Poisson-multinomial transformation.
 
-Chapter \@ref(multi-agyw) estimated HIV risk group proportions for AGYW, facilitating countries in SSA to prioritise their delivery of HIV prevention services.
-The number of new infections that might be reached under a variety of risk stratification strategies were also analyzed.
-The `R-INLA` software was used to specify multinomial spatio-temporal models via the Poisson-multinomial transformation, including complex two- and three-way Kronecker product interactions.
-
-Chapter \@ref(naomi-aghq) developed a novel Bayesian inference method, motivated by a challenging and practically important problem in HIV surveillance.
+Chapter \@ref(naomi-aghq) developed deterministic Bayesian inference methods, motivated by a challenging and practically important problem in evidene synthesis for small-area estimation of HIV indicators.
+Its most important contributions are two-fold.
+First, an implementation of INLA which is compatible with any model specified using a `TMB` C++ template.
+Second, a quadrature rule which naturally extends the applicability of INLA methods to moderate hyperparameter dimension.
 
 ## Limitations
 
@@ -39,22 +43,33 @@ The most important limitations of the work done in this thesis are as follows.
 
 ## Future work
 
-Promising avenues for future work include:
+Promising avenues for future work that I would prioritise include:
 
-* Extending the risk group model described in Chapter \@ref(multi-agyw) to include all adults 15-49.
-This could involve modelling of age-stratified sexual partnerships [@wolock2021evaluating].
-Such a model would likely fall out of the scope of `R-INLA`, but would be possible to write with `TMB` and therefore amenable to the methods advanced in Chapter \@ref(naomi-aghq).
+1. AGYW account for $x$% of all new HIV infections in SSA. 
+As such, it would be valuable to extend the risk group model described in Chapter \@ref(multi-agyw) to include all adults 15-49.
+This might involve modelling of age-stratified sexual partnerships [@wolock2021evaluating].
+Such a model would likely fall out of the scope of `R-INLA`, but would be possible to write with `TMB` and therefore amenable to the inference methods advanced in Chapter \@ref(naomi-aghq).
 
-## Conclusions
+2. For practical use of the INLA implementation developed in Chapter \@ref(naomi-aghq) it is crucial that the speed and usability are improved.
+The most important speed improvement would likely come from using the simplified approximation to the Laplace marginals developed by @wood2020simplified.
+Usability would be enhanced greatly by integrating the methods into statistical software, first and foremost via the `aghq` package.
+The primary difficulty, as it appears now, which would have to be overcome is that the `random` argument of `TMB::MakeADFun` does not allow indexing.
+
+3. The universal INLA implementation developed in this thesis enables methodological research which was prohibitively difficult before.
+Loa loa and Naomi ELGMs.
+One `TMB` template many inference methods, including gold-standard NUTS via `tmbstan`.
+
+## Broader reflections
 
 I am uncertain about this direct impact of this work.
 The methodological contributions of Chapters \@ref(beyond-borders) and \@ref(naomi-aghq) could eventually lead to at best marginally more accurate indicator estimates.
 It is hard not to see these improvements as relatively inconsequential within the broader context of the HIV response and the challenges posed to it.
 
-Applied modelling and methodological research using complex data often pushes on the boundaries of the available statistical toolkit.
-During this research, I encountered difficulties trying to compare models implemented using different statistical tools.
-Similarly, I found it challenging, if not impossible, to implement precisely same model using different tooling, leading to conflation of models and inference methodologies.
+I found that the applied modelling and methodological research in this thesis pushed on the boundaries of available statistical software.
+For example, during the course of this research I encountered difficulties comparing models implemented using different software for inference.
+I found it challenging, if not impossible, to implement precisely same model using different software.
 As the frequently asked questions section of the `R-INLA` website [@rinla2023faq] notes, "the devil is in the details".
+This led to conflation of statistical models and inference methodologies.
 Ultimately, I resolved these difficulties by implementing all models in Chapters \@ref(beyond-borders) and \@ref(naomi-aghq) using `TMB` model templates.
 (And indeed for future development, I would recommend the model used in Chapters \@ref(multi-agyw) is implemented using `TMB`).
 `TMB` was sufficiently flexible to meet the requirements I had.
@@ -62,9 +77,8 @@ The benefits of such an ecosystem of packages built using `TMB` are noted by @st
 I would particularly highlight the benefit of enabling analysts to easily vary their choice of inference method based on the stage of model development that they are in.
 
 To the best of my abilities, this thesis, and the work described within it, was written in keeping with the principles of open science.
-I hope that doing so allows my work to be appropriately scrutinised, and optimistically built upon.
-This would not have been possible without a range of tools from the R ecosystem such as `rmarkdown` and `rticles` for reporting, `devtools` for R package development.
-I also used tools written by software engineers within the MRC Centre for Global Infectious Disease Analysis such as `orderly` and `didehpc`.
+I hope that doing so allows my work to be scrutinised, and, more optimistically, built upon.
+This was made possible tools from the R ecosystem such as `rmarkdown` and `rticles` for reporting, `devtools` for R package development, as well as those written by software engineers within the MRC Centre for Global Infectious Disease Analysis such as `orderly` and `didehpc`.
 
 <!-- Aims for HIV response going forward, and the surveillance capabilities needed to meet them. -->
 <!-- Greater reliance on routine health system data. -->
