--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -43,7 +43,7 @@ knitr::include_graphics("../figures/beyond-borders/geometries.png")
 #
 
 ```{r crps-mean-se-civ, echo=FALSE, out.width="80%", fig.align = 'center'}
-resource_version <- "20231217-185705-97a395ec"
+resource_version <- "20231218-195551-0129f3b4"
 knitr::include_graphics(paste0("../resources/beyond-borders/", resource_version, "/depends/crps-mean-se-civ.png"))
 ```
 
@@ -62,8 +62,20 @@ knitr::include_graphics("global-aids-strategy.png")
 #
 
 ```{r available-surveys, echo=FALSE, out.width="90%", fig.align = 'center'}
-resource_version <- "20231120-121631-164346ab"
+resource_version <- "20231219-192637-4244d933"
 knitr::include_graphics(paste0("../resources/multi-agyw/", resource_version, "/depends/available-surveys.png"))
+```
+
+#
+
+```{r thesis-slide-multi-agyw, echo=FALSE, out.width="100%", fig.align = 'center'}
+knitr::include_graphics(paste0("../resources/multi-agyw/", resource_version, "/depends/thesis-slide-multi-agyw.png"))
+```
+
+#
+
+```{r model-direct-benefits, echo=FALSE, out.width="100%", fig.align = 'center'}
+knitr::include_graphics(paste0("../resources/multi-agyw/", resource_version, "/depends/model-direct-benefits.png"))
 ```
 
 #
