--- a/05-multi-agyw.Rmd
+++ b/05-multi-agyw.Rmd
@@ -9,16 +9,16 @@ documentclass: book
 bibliography: references.bib
 ---
 
-```{r}
-comma <- function(x) formatC(x, format = "d", big.mark = ",")
-
-resource_version <- "20231120-121631-164346ab"
-```
-
 # A model for risk group proportions {#multi-agyw}
 \adjustmtc
 \markboth{A model for risk group proportions}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
+
+```{r}
+comma <- function(x) formatC(x, format = "d", big.mark = ",")
+
+resource_version <- "20231219-192637-4244d933"
+```
 
 This chapter describes an application of Bayesian spatio-temporal statistics to small-area estimation of HIV risk group proportions.
 This work was conducted in collaboration with colleagues from the MRC Centre for Global Infectious Disease Analysis and UNAIDS.
@@ -879,7 +879,7 @@ First, by taking a modular modelling approach, I integrated all relevant survey 
 Second, whereas direct estimates exhibit large sampling variability at a district level, I alleviated this issue using spatio-temporal smoothing (Figure \@ref(fig:model-direct-benefits)).
 Third, I provided estimates in all district-years, including those not directly sampled by surveys, allowing estimates to be consistently fed into further analysis and planning pipelines such as my analysis of risk group specific prevalence and incidence.
 
-(ref:model-direct-benefits) The modelled estimates are more plausibly spatially smooth than the direct estimates, and do not have any missing values.
+(ref:model-direct-benefits) The modelled estimates display more plausible spatial smoothness than the direct estimates. In addition, missing values in the direct estimates are appropriately infilled by the model.
 
 ```{r model-direct-benefits, fig.cap="(ref:model-direct-benefits)"}
 knitr::include_graphics(paste0("resources/multi-agyw/", resource_version, "/depends/model-direct-benefits.png"))
