Note about hivtools.unaids.org/pse

--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -29,7 +29,8 @@ Useful to base methodological developments on.
 
 Chapter \@ref(multi-agyw) estimated HIV risk group proportions for AGYW to enable implementation of the Global AIDS strategy.
 The risk group proportions were used to disaggregate HIV prevalence and incidence estimates by behaviour, and assess the benefits of a variety of risk stratification strategies.
-Estimates from this work are the basis for a tool used by countries in SSA to prioritise their delivery of HIV prevention services.
+Estimates from this work are the basis for a tool used to prioritise delivery of HIV prevention services by countries in SSA.
+The tool is to be updated by UNAIDS as a part of the annual HIV estimates process.
 Alongside this applied contribution, Chapter \@ref(multi-agyw) exemplified specification of complex multinomial spatio-temporal models in `R-INLA` using the Poisson-multinomial transformation.
 
 Chapter \@ref(naomi-aghq) developed deterministic Bayesian inference methods, motivated by a challenging and practically important problem in evidene synthesis for small-area estimation of HIV indicators.
