Start putting naomi-aghq results plots in

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -279,6 +279,7 @@ Multiple data sources are used in Chapter \@ref(multi-agyw) to overcome the limi
 3. **Expert guidance**:
 Expert epidemiological, demographic, and local stakeholder guidance can be used to improve estimates.
 Ensuring the quality of any data used in the estimation process is essential.
+UNAIDS process.
 
 4. **Uncertainty quantification**:
 Conclusions drawn by synthesising multiple incomplete data sources are unlikely to be firm and unanimous.
