--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -688,6 +688,7 @@ On the other hand, for non-linear link functions $g$ such as the commonly used e
 * @li2012spatial and @li2012lgcp.
 * Discussion of non-stationarity [@paciorek2006spatial].
 * The stochastic partial differential equation approximation as a more computationally efficient way to implement integrated kernels [@wilson2018pointless].
+* BYM2 proportion parameter in the case where there is an outlier ends up too IID. Urban rural or other covariates. Heavier tail than Gaussian.
 
 ### Model selection
 
