--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -1444,7 +1444,23 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 time_taken <- readr::read_csv(paste0("resources/naomi-aghq/", resource_version, "/depends/time-taken.csv"))
 ```
 
+#### Point estimates
+
+(ref:mean-sd-alt-latent) Figure caption.
+
+```{r mean-sd-alt-latent, fig.cap="(ref:mean-sd-alt-latent)"}
+knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/mean-sd-alt-latent.png"))
+```
+
+#### Distributional quantities
+
 ### Exceedance probabilities
+
+(ref:exceedance) Figure caption.
+
+```{r exceedance, fig.cap="(ref:exceedance)"}
+knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/exceedance.png"))
+```
 
 #### Meeting the second 90
 
