--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -54,11 +54,11 @@ knitr::include_graphics(path)
 | Description | Prior | Additional details  |
 |:------------|:------|:--------------------|
 | Gamma | $l \sim \text{Gamma}(1, 1)$ ||
-| Geometry-informed inverse-gamma | $l \sim \text{IG}(a, b)$ | |
-| Geometry-informed normal | $l \sim \mathcal{N}^{+}(0, \sigma)$ | |
+| Geometry-informed inverse-gamma | $l \sim \text{IG}(a, b)$ | The parameters $a$ and $b$ chosen such that 1\% of the prior mass was below 0.1 and 1\% of the prior mass was above the maximum distance between points [@betancourt2017robust] |
+| Geometry-informed normal | $l \sim \mathcal{N}^{+}(0, \sigma)$ | The parameter $\sigma$ set as one third the difference between the minimum and maximum distance between points [@betancourt2017robust] |
 | Log-normal | $l \sim \text{Log-normal}(0, 1)$ | |
-| Non-informative | $p(l) = 1$ | |
-| Oracle normal | $l \sim \mathcal{N}(2.5, 1)$ | |
+| Non-informative | $p(l) = 1$ | This is an improper prior in that it does not integrate to one |
+| Oracle normal | $l \sim \mathcal{N}^{+}(2.5, 1)$ | The mean of this prior was set to the true value of the lengthscale |
 
 Table: (\#tab:lengthscale-prior) Six lengthscale prior distributions were considered for use.
 
