Some spell-check and notes for Chapter 4 conclusions

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -571,6 +571,11 @@ The kernel models with a prior distribution on the lengthscale performed better 
 These models were able to successfully infer the lengthscale (Appendix \@ref(lengthscale)).
 Discuss lengthscale to noise identifiability and posterior correlation.
 
+Learning a lengthscale allowed the kernel models to perform well even for IID synthetic data.
+
+For IID synthetic data, the spatial models performed worse on the interior of the geometry.
+For spatial synthetic data, the spatial models perormed better on the interior of the geometry.
+
 ## HIV prevalence study {#hiv-study}
 
 Simulation studies are a valuable tool for experimenting on models in controlled environments.
@@ -668,6 +673,19 @@ if(knitr::is_latex_output()) {
     gt::as_latex()
 }
 ```
+
+The results for each survey were as follows:
+
+1. For the 2017 PHIA survey in Côte d'Ivoire, all of the models performed similarly.
+Name of the city.
+Investigate BYM2 hypothesis here.
+Suggestion to include some type of covariates to overcome this challenge.
+
+2. For the 2017 PHIA survey in Malawi...
+
+3. For the 2017 PHIA survey in Tanzania...
+
+4. Finally, for the 2016 PHIA survey in Zimbabwe
 
 Figure \@ref(fig:crps-mean-se-surveys) and Table \@ref(tab:cv-crps).
 Figures \@ref(fig:ladder-civ2017phia), \@ref(fig:ladder-mwi2016phia), \@ref(fig:ladder-tza2017phia), and \@ref(fig:ladder-zwe2016phia) show the posterior mean and 95% credible interval obtained for each area for each inferential model.
