--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -148,49 +148,49 @@ path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mea
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-1) Cloropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the first vignette geometry (Panel \@ref(fig:geometries)A).
+(ref:map-crps-1) Choropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the first vignette geometry (Panel \@ref(fig:geometries)A).
 
 ```{r map-crps-1, fig.cap="(ref:map-crps-1)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-1.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-2) Cloropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the second vignette geometry (Panel \@ref(fig:geometries)B).
+(ref:map-crps-2) Choropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the second vignette geometry (Panel \@ref(fig:geometries)B).
 
 ```{r map-crps-2, fig.cap="(ref:map-crps-2)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-2.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-3) Cloropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the third vignette geometry (Panel \@ref(fig:geometries)C).
+(ref:map-crps-3) Choropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the third vignette geometry (Panel \@ref(fig:geometries)C).
 
 ```{r map-crps-3, fig.cap="(ref:map-crps-3)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-3.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-4) Cloropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the fourth vignette geometry (Panel \@ref(fig:geometries)D).
+(ref:map-crps-4) Choropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the fourth vignette geometry (Panel \@ref(fig:geometries)D).
 
 ```{r map-crps-4, fig.cap="(ref:map-crps-4)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-4.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-grid) Cloropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the grid geometry (Panel \@ref(fig:geometries)E).
+(ref:map-crps-grid) Choropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the grid geometry (Panel \@ref(fig:geometries)E).
 
 ```{r map-crps-grid, fig.cap="(ref:map-crps-grid)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-grid.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-civ) Cloropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the Côte d’Ivoire geometry (Panel \@ref(fig:geometries)F).
+(ref:map-crps-civ) Choropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the Côte d’Ivoire geometry (Panel \@ref(fig:geometries)F).
 
 ```{r map-crps-civ, fig.cap="(ref:map-crps-civ)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-civ.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-tex) Cloropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the Texas geometry (Panel \@ref(fig:geometries)G).
+(ref:map-crps-tex) Choropleths showing the mean value of the CRPS in estimating $\rho$, under each inferential model and simulation model, at each area of the Texas geometry (Panel \@ref(fig:geometries)G).
 
 ```{r map-crps-tex, fig.cap="(ref:map-crps-tex)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-tex.png")
@@ -322,49 +322,49 @@ knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-zwe2016phia.png"))
 ```
 
-(ref:map-civ2017phia) Cloropleth showing the pointwise CRPS in estimating $\rho_i$ for the Côte d’Ivoire 2017 PHIA survey (Panel \@ref(fig:hiv-surveys)A).
+(ref:map-civ2017phia) Choropleth showing the pointwise CRPS in estimating $\rho_i$ for the Côte d’Ivoire 2017 PHIA survey (Panel \@ref(fig:hiv-surveys)A).
 
 ```{r map-civ2017phia, fig.cap="(ref:map-civ2017phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/map-civ2017phia.png"))
 ```
 
-(ref:map-mwi2016phia) Cloropleth showing the pointwise CRPS in estimating $\rho_i$ for the Malawi 2016 PHIA survey (Panel \@ref(fig:hiv-surveys)B).
+(ref:map-mwi2016phia) Choropleth showing the pointwise CRPS in estimating $\rho_i$ for the Malawi 2016 PHIA survey (Panel \@ref(fig:hiv-surveys)B).
 
 ```{r map-mwi2016phia, fig.cap="(ref:map-mwi2016phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/map-mwi2016phia.png"))
 ```
 
-(ref:map-tza2017phia) Cloropleth showing the pointwise CRPS in estimating $\rho_i$ for the Tanzania 2017 PHIA survey (Panel \@ref(fig:hiv-surveys)C).
+(ref:map-tza2017phia) Choropleth showing the pointwise CRPS in estimating $\rho_i$ for the Tanzania 2017 PHIA survey (Panel \@ref(fig:hiv-surveys)C).
 
 ```{r map-tza2017phia, fig.cap="(ref:map-tza2017phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/map-tza2017phia.png"))
 ```
 
-(ref:map-zwe2016phia) Cloropleth showing the pointwise CRPS in estimating $\rho_i$ for the Zimbabwe 2016 PHIA survey (Panel \@ref(fig:hiv-surveys)D).
+(ref:map-zwe2016phia) Choropleth showing the pointwise CRPS in estimating $\rho_i$ for the Zimbabwe 2016 PHIA survey (Panel \@ref(fig:hiv-surveys)D).
 
 ```{r map-zwe2016phia, fig.cap="(ref:map-zwe2016phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/map-zwe2016phia.png"))
 ```
 
-(ref:histogram-ecdf-diff-civ2017phia) Côte d’Ivoire 2017 PHIA survey \@ref(fig:hiv-surveys)A.
+(ref:histogram-ecdf-diff-civ2017phia) Probability integral transform histograms and empirical cumulative distribution function difference plots in estimating $\rho$ for the Côte d’Ivoire 2017 PHIA survey (Panel \@ref(fig:hiv-surveys)A).
 
 ```{r histogram-ecdf-diff-civ2017phia, fig.cap="(ref:histogram-ecdf-diff-civ2017phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-civ2017phia.png"))
 ```
 
-(ref:histogram-ecdf-diff-mwi2016phia) Malawi 2016 PHIA survey \@ref(fig:hiv-surveys)B.
+(ref:histogram-ecdf-diff-mwi2016phia)  Probability integral transform histograms and empirical cumulative distribution function difference plots in estimating $\rho$ for the Malawi 2016 PHIA survey (Panel \@ref(fig:hiv-surveys)B).
 
 ```{r histogram-ecdf-diff-mwi2016phia, fig.cap="(ref:histogram-ecdf-diff-mwi2016phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-mwi2016phia.png"))
 ```
 
-(ref:histogram-ecdf-diff-tza2017phia) Tanzania 2017 PHIA survey \@ref(fig:hiv-surveys)C.
+(ref:histogram-ecdf-diff-tza2017phia)  Probability integral transform histograms and empirical cumulative distribution function difference plots in estimating $\rho$ for the Tanzania 2017 PHIA survey (Panel \@ref(fig:hiv-surveys)C).
 
 ```{r histogram-ecdf-diff-tza2017phia, fig.cap="(ref:histogram-ecdf-diff-tza2017phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-tza2017phia.png"))
 ```
 
-(ref:histogram-ecdf-diff-zwe2016phia) Zimbabwe 2016 PHIA survey \@ref(fig:hiv-surveys)D.
+(ref:histogram-ecdf-diff-zwe2016phia)  Probability integral transform histograms and empirical cumulative distribution function difference plots in estimating $\rho$ for the Zimbabwe 2016 PHIA survey (Panel \@ref(fig:hiv-surveys)D).
 
 ```{r histogram-ecdf-diff-zwe2016phia, fig.cap="(ref:histogram-ecdf-diff-zwe2016phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-zwe2016phia.png"))
