Add HIV study hyperparameter plots

--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -78,7 +78,7 @@ knitr::include_graphics(path)
 
 ## Simulation study {#simulation-appendix}
 
-### Lengthscale hyperparameter recovery {#lengthscale}
+### Lengthscale recovery {#lengthscale}
 
 (ref:lengthscale-recovery) The lengthscale posterior mean and 95% credible interval obtained using the centroid kernel model on integrated kernel data for the first 40 simulation replicates on each geometry. The true lengthscale, and lengthscale obtained using the heuristic method of @best1999bayesian, are shown as dashed horizontal lines.
 
@@ -87,7 +87,7 @@ path <- paste0("resources/beyond-borders/", resource_version, "/depends/lengthsc
 knitr::include_graphics(path)
 ```
 
-### BYM2 proportion hyperparameter {#bym2-proportion}
+### BYM2 proportion {#bym2-proportion}
 
 (ref:proportion-recovery) The BYM2 proportion parameter posterior mean and 95% credible interval obtained for the first 40 simulation replicates for the realistic geometries. When the simulated data is IID, the BYM2 proportion parameter is in the majority of cases below 0.5, corresponding to mostly IID (spatially unstructured) noise. When the simulated data is either Besag or IK, the BYM2 proportion parameter is in the majority of cases above 0.5, corresponding to mostly Besag (spatially structured) noise.
 
@@ -249,6 +249,22 @@ knitr::include_graphics(path)
 ```
 
 ## HIV study {#hiv-appendix}
+
+### Lengthscale
+
+(ref:lengthscale-posteriors) Figure caption.
+
+```{r lengthscale-posteriors, fig.cap="(ref:lengthscale-posteriors)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/lengthscale-posteriors.png"))
+```
+
+### BYM2 proportion
+
+(ref:proportion-posteriors) Figure caption.
+
+```{r proportion-posteriors, fig.cap="(ref:proportion-posteriors)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/proportion-posteriors.png"))
+```
 
 ### Estimates
 
