Add in output point estimate comparison plots

--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -351,3 +351,20 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 ## Normalising constant estimation
 
 ## Inference comparison
+
+### Point estimates
+
+(ref:mean-alt-output) Figure caption.
+
+```{r mean-alt-output, fig.cap="(ref:mean-alt-output)"}
+knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/mean-alt-output.png"))
+```
+
+(ref:sd-alt-output) Figure caption.
+
+```{r sd-alt-output, fig.cap="(ref:sd-alt-output)"}
+knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/sd-alt-output.png"))
+```
+
+### Distributional quantities
+
