Update defence slides (complete first draft now)

--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -96,7 +96,16 @@ knitr::include_graphics("../figures/naomi-aghq/conditional-simulation-rho-diff-f
 knitr::include_graphics("../figures/naomi-aghq/pca-demo.png")
 ```
 
+#
+
+```{r sd-latent, echo=FALSE, out.width="90%", fig.align = 'center'}
+resource_version <- list.files("../resources/naomi-aghq")
+knitr::include_graphics(paste0("../resources/naomi-aghq/", resource_version, "/depends/sd-latent.png"))
+```
+
 # Acknowledgements
+
+Thanks to:
 
 | Collaborator  | Affiliation       |
 | ------------- | ----------------- |
@@ -107,4 +116,4 @@ knitr::include_graphics("../figures/naomi-aghq/pca-demo.png")
 | Machine Learning and Global Health Network | Worldwide |
 | StatML CDT  | Imperial, Oxford    |
 
-# References {.allowframebreaks}
+<!-- # References {.allowframebreaks} -->
